# hacking_slot_machines

./: README.md  README.txt  atlas.py  brute_force_search.py  decrypt.py  index_jackpot_qs.py  pi_interface.py
jackpot_q_bank/: UK_geography_01.QQQ  UK_geography_02.QQQ  UK_geography_03.QQQ  UK_geography_04.QQQ  UK_geography_05.QQQ  UK_geography_06.QQQ  UK_geography_07.QQQ  UK_geography_08.QQQ  UK_geography_09.QQQ  UK_geography_10.QQQ  UK_history_01.QQQ  UK_history_02.QQQ  UK_history_03.QQQ  UK_history_04.QQQ  UK_history_05.QQQ  UK_history_06.QQQ  UK_history_07.QQQ  UK_history_08.QQQ  UK_history_09.QQQ  UK_history_10.QQQ  ancient_history_01.QQQ  ancient_history_02.QQQ  ancient_history_03.QQQ  ancient_history_04.QQQ  ancient_history_05.QQQ  ancient_history_06.QQQ  ancient_history_07.QQQ  ancient_history_08.QQQ  ancient_history_09.QQQ  ancient_history_10.QQQ  animal_science_01.QQQ  animal_science_02.QQQ  animal_science_03.QQQ  animal_science_04.QQQ  animal_science_05.QQQ  animal_science_06.QQQ  animal_science_07.QQQ  animal_science_08.QQQ  animal_science_09.QQQ  animal_science_10.QQQ  (+158 more)
src/: ARPipeline.cpp  ARPipeline.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  GeometryTypes.cpp  GeometryTypes.hpp  OCR.cpp  OCR.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  QuestionLookup.cpp  QuestionLookup.hpp  main.cpp
